--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue": "^2.5.11",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.4.2",
-    "vuefire": "^2.2.4"
+    "vuefire": "^2.2.4",
+    "vuex": "^3.5.1"
   },
   "browserslist": [
     "> 1%",
